tests/errors/legacy-ending-number.typ
#import "../../src/lib.typ": score
#score(
  time: "4/4",
  bars: ((ending: (number: "1", start: true), notes: "C5:w"),),
)
